landing page problem text-alignment fixed

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -91,7 +91,7 @@ ul#nav li:hover {color:#60c;}
 .contenu img { width:auto;}
 
 .intro {background:#e6e6e6;background:#b3b3b3;}
-.intro h1 {text-align:center;position:fixed;width:500px;left:50%;margin-left:-250px;top:25%;color:#231f20;font:30px/2.7 normal 'Terminal Dosis', 'Megrim';text-transform:uppercase;}
+.intro h1 {text-align:center;position:relative;width:500px;left:50%;margin-left:-250px;top:25%;color:#231f20;font:30px/2.7 normal 'Terminal Dosis', 'Megrim';text-transform:uppercase;}
 .contentflow {}
 .timeflow {}
 .colortv {}
